hard-gists/706573/run.log
=== Docker Run Log for 706573 ===
Started at: Mi 29. Okt 16:58:43 CET 2025

[2025-10-29 16:58:43] START: Running container for 706573
[2025-10-29 16:58:43] SUCCESS: Container 82020cac6767c3f8736e96f2963d665a424b56d4c673768d6dd003863267551f started for 706573
=== Container logs for 706573 ===
  File "/snippet.py", line 21
    print "%d items of type %s" % (list_length, tag_types[list_item_type])
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 706573 ===
[2025-10-29 16:58:45] INFO: Container 82020cac6767c3f8736e96f2963d665a424b56d4c673768d6dd003863267551f has stopped
